<resources>
    <string name="app_name">When and Where</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_game_setup">FullscreenActivity</string>
    <string name="title_activity_simple_just_when">FullscreenActivity</string>
    <string name="intro_music_epicness_by_music_today_80">Intro music - Epicness By Music Today 80</string>
    <string name="https_soundcloud_com_musictoday80_epic_music">https://soundcloud.com/musictoday80/epic-music</string>
    <string name="current">Current</string>
    <string name="before">Before</string>
    <string name="now">Now</string>
    <string name="after">After</string>
    <string name="correct_0">Correct: 0</string>
    <string name="incorrect_0">Incorrect: 0</string>
    <string name="title_activity_simple_when_game_results">FullscreenActivity</string>
    <string name="next_level">Next Level</string>
    <string name="end_game">End Game</string>
    <string name="good_job">GOOD JOB</string>
    <string name="title_activity_when_and_where">FullscreenActivity</string>
    <string name="worldmap">WorldMap</string>
    <string name="title_activity_when_after_where">FullscreenActivity</string>
    <string name="title_activity_when_after_where_answers">FullscreenActivity</string>
    <string name="answers">Answers</string>
    <string name="event">Event</string>
    <string name="location">Location</string>
    <string name="year">Year</string>
    <string name="button">Button</string>
    <string name="done">Done</string>
    <string name="title_activity_historic_stories_selector">FullscreenActivity</string>
    <string name="title_activity_historic_stories_game">FullscreenActivity</string>
</resources>