<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/simpleBoard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".SimpleJustWhenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/HBoardLayout"
            android:layout_width="729dp"
            android:layout_height="343dp"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/currentCardLayout"
                android:layout_width="181dp"
                android:layout_height="match_parent"
                android:background="#000000"
                android:gravity="center">

                <TextView
                    android:id="@+id/CurrentTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/current"
                    android:textAlignment="center"
                    android:textColor="#F6F5F5"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:visibility="visible" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/beforeAreaLayout"
                android:layout_width="181dp"
                android:layout_height="match_parent"
                android:background="#000000">

                <TextView
                    android:id="@+id/BeforeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/before"
                    android:textAlignment="center"
                    android:textColor="#FBFBFB"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/BeforeYearText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="bottom|center_horizontal"
                    android:textAlignment="center"
                    android:textStyle="bold" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/nowLayout"
                android:layout_width="169dp"
                android:layout_height="match_parent"
                android:background="#000000">

                <TextView
                    android:id="@+id/NowText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/now"
                    android:textAlignment="center"
                    android:textColor="#FBFBFB"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/NowYearText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="bottom|center_horizontal"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/afterAreaLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#000000">

                <TextView
                    android:id="@+id/AfterText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/after"
                    android:textAlignment="center"
                    android:textColor="#FAFAFA"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/AfterYearText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="bottom|center_horizontal"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/CorrectScoreText"
                android:layout_width="94dp"
                android:layout_height="fill_parent"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_weight="1"
                android:text="@string/correct_0"
                android:textAlignment="center"
                android:textColor="#39D83F"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/IncorrectScoreText"
                android:layout_width="60dp"
                android:layout_height="fill_parent"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_weight="1"
                android:text="@string/incorrect_0"
                android:textAlignment="center"
                android:textColor="#D32727"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TimeText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Time: 0"
                android:textAlignment="center"
                android:textColor="#33C32E"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>